prevents wordbreaks in buy options

--- a/static/css/components/Tools.less
+++ b/static/css/components/Tools.less
@@ -140,6 +140,7 @@
       border-spacing: 5px;
       margin-left: 0;
       width: 175px;
+      white-space: nowrap;
 
       td {
         padding: 0;
